--- a/src/main/webapp/html/Book.html
+++ b/src/main/webapp/html/Book.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="../css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Books Management</title>
+
 </head>
 <body>
 
@@ -105,6 +106,6 @@
     </tbody>
 </table>
 
-<script src="Book.js"></script>
+<script src="../js/Book.js"></script>
 </body>
 </html>
